--- a/autobotz_ws/src/estrategia/package.xml
+++ b/autobotz_ws/src/estrategia/package.xml
@@ -2,12 +2,12 @@
 <package>
   <name>estrategia</name>
   <version>0.0.0</version>
-  <description>The estrategia package</description>
+  <description>The strategy package</description>
 
   <!-- One maintainer tag required, multiple allowed, one person per tag --> 
   <!-- Example:  -->
   <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
-  <maintainer email="gustavo@todo.todo">gustavo</maintainer>
+  <maintainer email="gustdomar@gmail.com">gabriela</maintainer>
 
 
   <!-- One license tag required, multiple allowed, one license per tag -->
@@ -19,7 +19,7 @@
   <!-- Url tags are optional, but mutiple are allowed, one per tag -->
   <!-- Optional attribute type can be: website, bugtracker, or repository -->
   <!-- Example: -->
-  <!-- <url type="website">http://wiki.ros.org/estrategia</url> -->
+  <!-- <url type="website">http://wiki.ros.org/radio_controle</url> -->
 
 
   <!-- Author tags are optional, mutiple are allowed, one per tag -->
@@ -41,9 +41,16 @@
   <!--   <test_depend>gtest</test_depend> -->
   <buildtool_depend>catkin</buildtool_depend>
 
+  <build_depend>roscpp</build_depend>
+
+  <run_depend>roscpp</run_depend>
+ 
 
   <!-- The export tag contains other, unspecified, tags -->
   <export>
+    <!-- You can specify that this package is a metapackage here: -->
+    <!-- <metapackage/> -->
+
     <!-- Other tools can request additional information be placed here -->
 
   </export>
