--- a/autobotz_ws/src/controle/CMakeLists.txt
+++ b/autobotz_ws/src/controle/CMakeLists.txt
@@ -6,8 +6,21 @@ find_package(catkin REQUIRED COMPONENTS
   roscpp
   std_msgs
   geometry_msgs
+  genmsg
+  message_generation
 )
  
+add_message_files(
+   FILES
+   squareCenters.msg
+ )
+
+generate_messages(
+   DEPENDENCIES
+   std_msgs
+   geometry_msgs
+ )
+
 
 catkin_package()
 # CATKIN_DEPENDS message_runtime 
