--- a/autobotz_ws/src/visao/blob_detect/CMakeLists.txt
+++ b/autobotz_ws/src/visao/blob_detect/CMakeLists.txt
@@ -53,7 +53,7 @@ find_package(OpenCV REQUIRED)
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   squareCenters.msg
+   feature.msg
  )
 
 ## Generate services in the 'srv' folder
