--- a/autobotz_ws/src/estrategia/package.xml
+++ b/autobotz_ws/src/estrategia/package.xml
@@ -45,6 +45,7 @@
   <build_depend>geometry_msgs</build_depend>
   <build_depend>message_generation</build_depend>
 
+
   <run_depend>roscpp</run_depend>
   <run_depend>std_msgs</run_depend>
   <run_depend>geometry_msgs</run_depend>
@@ -56,6 +57,8 @@
     <!-- <metapackage/> -->
 
     <!-- Other tools can request additional information be placed here -->
-
+ 
+  <!-- <cpp cflags="-I${prefix}/msg/cpp" />	-->
+  
   </export>
 </package>
