--- a/autobotz_ws/src/estrategia/package.xml
+++ b/autobotz_ws/src/estrategia/package.xml
@@ -58,7 +58,7 @@
 
     <!-- Other tools can request additional information be placed here -->
  
-  <!-- <cpp cflags="-I${prefix}/msg/cpp" />	-->
+   <cpp cflags="-I${prefix}/msg/cpp" />	
   
   </export>
 </package>
