CMakeLists de estrategia e controle atualizados com linha add_dependencies

--- a/autobotz_ws/src/estrategia/CMakeLists.txt
+++ b/autobotz_ws/src/estrategia/CMakeLists.txt
@@ -40,5 +40,5 @@ include_directories(include ${catkin_INCLUDE_DIRS})
 add_executable(strategy src/robo.cpp src/transporte.cpp src/estados.cpp src/main.cpp) 
 target_link_libraries(strategy ${catkin_LIBRARIES}) 
 
-add_dependencies(strategy ${catkin_EXPORTED_TARGETS})
+add_dependencies(strategy ${estrategia_EXPORTED_TARGETS})
 
