testando branch develop

--- a/autobotz_ws/src/controle/CMakeLists.txt
+++ b/autobotz_ws/src/controle/CMakeLists.txt
@@ -27,10 +27,10 @@ catkin_package(
  CATKIN_DEPENDS message_runtime 
 )
 
-#include_directories(${OpenCV_INCLUDE_DIRS})
+# include_directories(${OpenCV_INCLUDE_DIRS})
 include_directories(include ${catkin_INCLUDE_DIRS})
 
-#----------------------- ESTRATEGIA  ------------------------#
+#----------------------- CONTROLE  ------------------------#
 
 add_executable(control src/main.cpp) 
 target_link_libraries(control ${catkin_LIBRARIES}) 
