Muitas atualizacoes em visao
- Publica vetor de features no ROS (novo formato de menssagem)
- Foi adicionado um pouco de documentacao
- Leitura de paleta a partir de um arquivo

--- a/autobotz_ws/src/visao/blob_detect/CMakeLists.txt
+++ b/autobotz_ws/src/visao/blob_detect/CMakeLists.txt
@@ -53,7 +53,8 @@ find_package(OpenCV REQUIRED)
 ## Generate messages in the 'msg' folder
  add_message_files(
    FILES
-   feature1.msg
+   feature.msg
+   featureVec.msg
  )
 
 ## Generate services in the 'srv' folder
