--- a/autobotz_ws/src/barco_launch/CMakeLists.txt
+++ b/autobotz_ws/src/barco_launch/CMakeLists.txt
@@ -122,7 +122,7 @@ catkin_package(
 # add_dependencies(barco ${${PROJECT_NAME}_EXPORTED_TARGETS} ${catkin_EXPORTED_TARGETS})
 
 ## Declare a C++ executable
-# add_executable(barco_node src/barco_node.cpp)
+add_executable(barco_launch src/main.cpp)
 
 ## Add cmake target dependencies of the executable
 ## same as for the library above
