Ajusta valores de visao pra piscina do CPH

--- a/autobotz_ws/config/palette.conf
+++ b/autobotz_ws/config/palette.conf
@@ -1,5 +1,21 @@
-0   0   200 100 red
-50  200 200 100 yellow
-50  255 255 100 yellow
-100 255 255 100 yellow
+0   0   255 100 red
+0   255 255 40  yellow
+50  255 255 40  yellow
+100 255 255 40  yellow
+0   200 255 40  yellow
+50  200 255 40  yellow
+100 200 255 40  yellow
+0   255 200 40  yellow
+50  255 200 40  yellow
+100 255 200 30  yellow
+0   200 200 50  yellow
+255 0   0   100 blue
+255 255 0   50  blue
+255 255 50  50  blue
+255 200 50  50  blue
+255 150 0   77  blue
+200 100 0   50  blue
+
+7   10  95  50  red
+5   107 140 50  yellow
 
